--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "^2.26.2",
     "wagmi": "^2.14.16"
   },
